crates/pg_syntax/tests/snapshots/postgres_regress/json@189.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{\"a\": {\"b\":{\"c\": \"foo\"}}}'::json #>> array['a', null];"
---
SelectStmt@0..62
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..60
    AExpr@7..60
      TypeCast@7..40
        AConst@7..34
          Sconst@7..34 "'{\"a\": {\"b\":{\"c\": \"fo ..."
        Typecast@34..36 "::"
        TypeName@36..40
          Ident@36..40 "json"
      Whitespace@40..41 " "
      Op@41..44 "#>>"
      Whitespace@44..45 " "
      AArrayExpr@45..60
        Array@45..50 "array"
        Ascii91@50..51 "["
        AConst@51..54
          Sconst@51..54 "'a'"
        Ascii44@54..55 ","
        Whitespace@55..56 " "
        AConst@56..60
          NullP@56..60 "null"
  Ascii93@60..61 "]"
  Ascii59@61..62 ";"

