crates/pg_syntax/tests/snapshots/postgres_regress/json@195.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{\"a\": [{\"b\": \"c\"}, {\"b\": \"cc\"}]}'::json #>> array['a','1','b'];"
---
SelectStmt@0..71
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..69
    AExpr@7..69
      TypeCast@7..47
        AConst@7..41
          Sconst@7..41 "'{\"a\": [{\"b\": \"c\"}, { ..."
        Typecast@41..43 "::"
        TypeName@43..47
          Ident@43..47 "json"
      Whitespace@47..48 " "
      Op@48..51 "#>>"
      Whitespace@51..52 " "
      AArrayExpr@52..69
        Array@52..57 "array"
        Ascii91@57..58 "["
        AConst@58..61
          Sconst@58..61 "'a'"
        Ascii44@61..62 ","
        AConst@62..65
          Sconst@62..65 "'1'"
        Ascii44@65..66 ","
        AConst@66..69
          Sconst@66..69 "'b'"
  Ascii93@69..70 "]"
  Ascii59@70..71 ";"

